<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>
    <string name="widget_title" translatable="false">Stock Hawk Widget</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="message_invalid_cursor"
            translatable="false">This should only be called when Cursor is valid</string>
    <string name="message_invalid_cursor_position"
            translatable="false">Could not move Cursor to position: </string>

    <string name="radio_button_1_week" translatable="false">1W</string>
    <string name="radio_button_1_month" translatable="false">1M</string>
    <string name="radio_button_3_months" translatable="false">3M</string>
    <string name="radio_button_6_months" translatable="false">6M</string>
    <string name="radio_button_1_year" translatable="false">ALL</string>

    <string name="desc_radio_button_1_week" >stock graph for 1 week</string>
    <string name="desc_radio_button_1_month" >stock graph for 1 month</string>
    <string name="desc_radio_button_3_months" >stock graph for 3 month</string>
    <string name="desc_radio_button_6_months" >stock graph for 6 month</string>
    <string name="desc_radio_button_1_year" >stock graph for all time</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="desc_button_add_stock">add new stock</string>
    <string name="input_prefill"/>
    <string name="invalid_stock_symbol">Invalid Stock Symbol</string>
    <string name="desc_graph">Stock Price</string>
    <string name="stock_exist">This stock is already saved!</string>
    <string name="tv_stock_history">tap a graph</string>
</resources>
